--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from "../layouts/baseLayout.astro";
+import Hero from "../components/Hero.astro";
+import AboutTeaser from "../components/AboutTeaser.astro";
+import ServicesStrip from "../components/ServicesStrip.astro";
+import LatestPosts from "../components/LatestPosts.astro";
+import ContactCTA from "../components/ContactCTA.astro";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<BaseLayout
+  title="الرئيسية — حمزة نادي"
+  description="موقع حمزة نادي — فيديوهات، ملفات PDF، صور ومقالات."
+>
+  <Hero name=" Hamza Nadi حمزة نادي العديلي" />
+  <!-- <AboutTeaser /> -->
+  <ServicesStrip />
+  <LatestPosts />
+  <ContactCTA />
+</BaseLayout>
