--- a/src/components/ServicesStrip.astro
+++ b/src/components/ServicesStrip.astro
@@ -6,7 +6,7 @@
     <div class="services-grid">
       <div class="service-card">
         <img
-          src="/icons/Haykal_One Color Icon_Navy-08.png"
+          src={`${import.meta.env.BASE_URL}icons/Haykal_One Color Icon_Navy-08.png`}
           alt="Marketing"
           class="service-icon"
         />
@@ -19,7 +19,7 @@
 
       <div class="service-card">
         <img
-          src="/icons/Haykal_One Color Icon_Navy-12.png"
+          src={`${import.meta.env.BASE_URL}icons/Haykal_One Color Icon_Navy-12.png`}
           alt="Brand Consulting"
           class="service-icon"
         />
@@ -32,7 +32,7 @@
 
       <div class="service-card">
         <img
-          src="/icons/Haykal_One Color Icon_Navy-31.png"
+          src={`${import.meta.env.BASE_URL}icons/Haykal_One Color Icon_Navy-31.png`}
           alt="Advertising"
           class="service-icon"
         />
@@ -45,7 +45,7 @@
 
       <div class="service-card">
         <img
-          src="/icons/Haykal_One Color Icon_Navy-33.png"
+          src={`${import.meta.env.BASE_URL}icons/Haykal_One Color Icon_Navy-33.png`}
           alt="Lead Generation"
           class="service-icon"
         />
