--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import AboutTeaser from "../components/AboutTeaser.astro";
 import ServicesStrip from "../components/ServicesStrip.astro";
 import LatestPosts from "../components/LatestPosts.astro";
 import ContactCTA from "../components/ContactCTA.astro";
+import "../styles/global.css";
 ---
 
 <BaseLayout
