--- a/src/layouts/baseLayout.astro
+++ b/src/layouts/baseLayout.astro
@@ -2,6 +2,7 @@
 const { title = "حمزة نادي", description = "الموقع الرسمي لحمزة نادي" } =
   Astro.props;
 import "../styles/global.css";
+  import.meta.env.BASE_URL
 ---
 
 <html lang="ar" dir="rtl">
