--- a/src/components/LatestPosts.astro
+++ b/src/components/LatestPosts.astro
@@ -4,6 +4,6 @@
 
     <!-- Elfsight LinkedIn Feed -->
     <script src="https://elfsightcdn.com/platform.js" async></script>
-    <div class="elfsight-app-df58ccb3-5ea3-4316-aa3c-da743d06e3e8" data-elfsight-app-lazy></div>
+    <div class="elfsight-app-df58ccb3-5ea3-4316-aa3c-da743d06e3e8" style="min-height: 700px;" data-elfsight-app-lazy></div>
   </div>
 </section>
